--- a/home.html
+++ b/home.html
@@ -14,22 +14,39 @@
 </head>
 <body>
 
-<div class="container">
-    <header class="row" style="background-color: white; height: 80px;">
-        <div class="col-xs-2">
-            <div class="inner">
-               <img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
-            </div>
-        </div>
-        <div class="col-xs-10" id="banner-parent">
-            <ul id="banner-list">
-                <li><a href="#" class="btn btn-primary btn-success" style="margin: 5px; position: absolute"><span class="glyphicon glyphicon-envelope"></span> Email Us</a></li>
-                <li><a href="#" class="btn btn-primary btn-success" style="margin: 5px; position: absolute"><span class="glyphicon glyphicon-earphone"></span> Call Us</a></li>
-            </ul>                 
-        </div>
-    </header>  
-</div>
+<div class="container-fluid">
+    <div class="row image-container" style="background-color: white; height: 80px;">
+       <img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
+    </div>  
+    <div class="jumbotron slogan-img" style="background-color: white">
+        <ul id="banner-list">
+            <li class="list-style">
+                <div class="list-icon">
+                    <div>
+                        <a href="#"><span class="glyphicon glyphicon-envelope" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                    </div>
+                    <div style="padding-left: 15px;">
+                        <b>Email Us</b> <br>
+                        <i>miladpainting@gmail.com</i>
+                    </div>
+                </div>
+            </li>
+            
+            <li class="list-style">
+                <div class="list-icon">
+                    <div>
+                        <a href="#"><span class="glyphicon glyphicon-earphone" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                    </div>
+                    <div style="padding-left: 15px;">
+                        <b>Call Us</b> <br>
+                        <i>00000000</i>
+                    </div>
 
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
