--- a/home.html
+++ b/home.html
@@ -13,104 +13,103 @@
 
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row image-container" style="background-color: white; height: 80px;">
+           <a href="home.html"><img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;"></a>
+        </div>  
+        <div class="jumbotron slogan-img" style="background-color: white">
+            <ul id="banner-list">
+                <li class="list-style">
+                    <div class="list-icon">
+                        <div>
+                            <a href="#"><span class="glyphicon glyphicon-envelope" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                        </div>
+                        <div style="padding-left: 15px;">
+                            <b>Email Us</b> <br>
+                            <i>miladpainting@gmail.com</i>
+                        </div>
+                    </div>
+                </li>
 
-<div class="container-fluid">
-    <div class="row image-container" style="background-color: white; height: 80px;">
-       <img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
-    </div>  
-    <div class="jumbotron slogan-img" style="background-color: white">
-        <ul id="banner-list">
-            <li class="list-style">
-                <div class="list-icon">
-                    <div>
-                        <a href="#"><span class="glyphicon glyphicon-envelope" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                <li class="list-style">
+                    <div class="list-icon">
+                        <div>
+                            <a href="#"><span class="glyphicon glyphicon-earphone" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                        </div>
+                        <div style="padding-left: 15px;">
+                            <b>Call Us</b> <br>
+                            <i>00000000</i>
+                        </div>
                     </div>
-                    <div style="padding-left: 15px;">
-                        <b>Email Us</b> <br>
-                        <i>miladpainting@gmail.com</i>
-                    </div>
-                </div>
-            </li>
-            
-            <li class="list-style">
-                <div class="list-icon">
-                    <div>
-                        <a href="#"><span class="glyphicon glyphicon-earphone" style="font-size: 2.8em; color: #1FF042;"></span> </a>
-                    </div>
-                    <div style="padding-left: 15px;">
-                        <b>Call Us</b> <br>
-                        <i>00000000</i>
-                    </div>
-
-                </div>
-            </li>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light container" style="border: 2px solid black">
+        <a class="navbar-brand" href="#" style="padding-top: 6px;">
+            <img src="img/logo.png" width="85" height="40" alt="" style="border: 2px solid green;">
+        </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item nav-style">
+            <a class="nav-li" href="#">Home Page</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>    
         </ul>
-    </div>
-</div>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>    
-    </ul>
-  </div>  
-</nav>
+      </div>  
+    </nav>
 
-<div class="container" style="margin-top:30px">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
+    <div class="container" style="margin-top:30px">
+      <div class="row">
+        <div class="col-sm-4">
+          <h2>About Me</h2>
+          <h5>Photo of me:</h5>
+          <div class="fakeimg">Fake Image</div>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          <h3>Some Links</h3>
+          <p>Lorem ipsum dolor sit ame.</p>
+          <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <hr class="d-sm-none">
+        </div>
+        <div class="col-sm-8">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Dec 7, 2017</h5>
+          <div class="fakeimg">Fake Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+          <br>
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Sep 2, 2017</h5>
+          <div class="fakeimg">Fake Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+      <p>Footer</p>
     </div>
-  </div>
-</div>
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
-
 </body>
 </html>
