--- a/home.html
+++ b/home.html
@@ -54,14 +54,14 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
+            <li class="nav-item nav-style">
+            <a class="nav-link" href="#">Home</a>
+          </li>
           <li class="nav-item nav-style">
-            <a class="nav-li" href="#">Home Page</a>
+            <a class="nav-link" href="#">About Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+          <li class="nav-item nav-style">
+            <a class="nav-link" href="#">Contact Us</a>
           </li>    
         </ul>
       </div>  
