--- a/contact_us.html
+++ b/contact_us.html
@@ -4,16 +4,18 @@
   <title>Milad Painting - Contact Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="contact.css">    
-    <link rel="stylesheet" href="banner.css">
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="contact.css">    
+  <link rel="stylesheet" href="banner.css">
+  <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="footer.css">
     
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> 
 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    
 </head>
 <body>
 
@@ -26,7 +28,7 @@
             <li class="list-style">
                 <div class="list-icon">
                     <div>
-                        <a href="#"><span class="glyphicon glyphicon-envelope" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                        <a href="#"><span class="fas fa-envelope" style="font-size: 2.0em; color: #1FF042 !Important; "></span> </a>
                     </div>
                     <div style="padding-left: 15px;">
                         <b>Email Us</b> <br>
@@ -38,7 +40,7 @@
             <li class="list-style">
                 <div class="list-icon">
                     <div>
-                        <a href="#"><span class="glyphicon glyphicon-earphone" style="font-size: 2.8em; color: #1FF042;"></span> </a>
+                        <a href="#"><span class="fas fa-phone" style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
                     </div>
                     <div style="padding-left: 15px;">
                         <b>Call Us</b> <br>
@@ -79,19 +81,21 @@
 -->
 <nav id="menu-nav">
   <div id="navigation-bar">
+<!--
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
+-->
     <ul>
-      <li><a href="#"><i class="fa fa-home"></i><span>Home</span></a></li>
-      <li><a href="#"><i class="fa fa-paint"></i><span>Services</span></a></li>
-      <li><a href="#"><i class="fa fa-user"></i><span>About</span></a></li>
-      <li><a href="#"><i class="fa fa-book"></i><span>Contact</span></a></li>
-	  <li><a href="#"><i class="fa fa-rss"></i> <span>Blog</span></a></li>
+      <li><a href="#"><i class="fas fa-home"></i><span>Home</span></a></li>
+      <li><a href="#"><i class="fas fa-paint-roller"></i><span>Services</span></a></li>
+      <li><a href="#"><i class="fas fa-user"></i><span>About</span></a></li>
+      <li><a href="#"><i class="fas fa-book"></i><span>Contact</span></a></li>
+	  <li><a href="#"><i class="fas fa-rss"></i> <span>Blog</span></a></li>
     </ul>
       </div>
-  </div>
+<!--  </div>-->
 </nav>
 
 <div class="container" style="margin-top:30px;margin-bottom: 20px;">
@@ -181,7 +185,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
-						<h5 class="mb-4 font-weight-bold" style="font-size: 15px;">CONTACT INFORMATION</h5>
+						<h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
 						<p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
 						<ul class="f-address">
 							<li>
@@ -195,7 +199,7 @@
 							</li>
 							<li>
 								<div class="row">
-									<div class="col-1"><i class="far fa-envelope"></i></div>
+									<div class="col-1"><i class="fas fa-envelope"></i></div>
 									<div class="col-8">
 										<h6 class="font-weight-bold mb-0" style="font-size: 13px;">Have any questions?</h6>
 										<p><a href="mailto:miladpainting@gmail.com">miladpainting@gmail.com</a></p>
