--- a/contact_us.html
+++ b/contact_us.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="footer.css">
     
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> 
+    <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet"> 
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -90,9 +90,9 @@
     <ul>
       <li><a href="#"><i class="fas fa-home"></i><span>Home</span></a></li>
       <li><a href="#"><i class="fas fa-paint-roller"></i><span>Services</span></a></li>
-      <li><a href="#"><i class="fas fa-user"></i><span>About</span></a></li>
-      <li><a href="#"><i class="fas fa-book"></i><span>Contact</span></a></li>
-	  <li><a href="#"><i class="fas fa-rss"></i> <span>Blog</span></a></li>
+      <li><a href="#"><i class="fas fa-image"></i><span>Gallery</span></a></li>
+      <li><a href="#"><i class="fas fa-book"></i><span>About Us</span></a></li>
+	  <li><a href="#"><i class="fas fa-address-card"></i> <span>Contact Us</span></a></li>
     </ul>
       </div>
 <!--  </div>-->
@@ -158,7 +158,7 @@
                             <label for="email">Email address:*</label>
                             <input type="email" class="form-control" placeholder="Enter email" id="email" required>
                         </div>
-                        <p style="font-weight: 900;color: red;text-align: right">( * ) Required Fields</p>
+                        <p style="font-weight: 600;color: red;text-align: right">( * ) Required Fields</p>
                       </div>
                       <div class="col-sm-12">
                         <div class="form-group">
@@ -167,7 +167,7 @@
                         </div>
                       </div>
 
-                        <button class="btn btn-primary" type="submit" value="Submit">Submit</button>
+                        <button class="btn btn-primary" type="submit" value="Submit" style="margin-left: 15px;">Submit</button>
                    </div>
               </form>
         
