updated carousel width

--- a/home.html
+++ b/home.html
@@ -100,13 +100,13 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/painting_1.jpg" alt="Los Angeles" width="100%" height="500">
+        <img src="img/" alt="Los Angeles" width="100%" height="500">
       </div>
       <div class="carousel-item">
-        <img src="img/painting_2.jpg" alt="Chicago" width="1100" height="500">
+        <img src="img/painting_2.jpg" alt="Chicago" width="100%" height="500">
       </div>
       <div class="carousel-item">
-        <img src="img/painting_3.jpg" alt="New York" width="1100" height="500">
+        <img src="img/painting_3.jpg" alt="New York" width="100%" height="500">
       </div>
     </div>
 
