--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="banner.css">
   <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="footer.css">
 
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -19,7 +20,7 @@
   <!-- Header -->
   <div class="container-fluid">
     <div class="row image-container" style="background-color: white; height: 80px;">
-      <img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
+      <img src="img//Website img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
     </div>
     <div class="jumbotron slogan-img" style="background-color: white">
       <ul id="banner-list">
@@ -93,21 +94,37 @@
     <!-- Indicators -->
     <ul class="carousel-indicators">
       <li data-target="#carousel" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel" data-slide-to="1"></li>
-      <li data-target="#carousel" data-slide-to="2"></li>
+      <!-- <li data-target="#carousel" data-slide-to="1"></li>
+      <li data-target="#carousel" data-slide-to="2"></li> -->
     </ul>
 
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/" alt="Los Angeles" width="100%" height="500">
+        <img src="img/Website img/painting_1.jpg" alt="Los Angeles" width="100%" height="700">
+        <div class="header-text hidden-xs">
+          <div class="col-md-12 text-center">
+            <h2>
+              <span>Welcome to <strong>LOREM IPSUM</strong></span>
+            </h2>
+            <br>
+            <h3>
+              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            </h3>
+            <br>
+            <div class="">
+              <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a
+                class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+          </div>
+        </div><!-- /header-text -->
+
+      </div>
+      <!-- <div class="carousel-item">
+        <img src="img/Website img/painting_2.jpg" alt="Chicago" width="100%" height="700">
       </div>
       <div class="carousel-item">
-        <img src="img/painting_2.jpg" alt="Chicago" width="100%" height="500">
-      </div>
-      <div class="carousel-item">
-        <img src="img/painting_3.jpg" alt="New York" width="100%" height="500">
-      </div>
+        <img src="img/Website img/painting_3.jpg" alt="New York" width="100%" height="700">
+      </div> -->
     </div>
 
     <!-- Left and right controls -->
