--- a/contact_us.html
+++ b/contact_us.html
@@ -20,7 +20,7 @@
   <!-- Header -->
   <div class="container-fluid">
     <div class="row image-container" style="background-color: white; height: 80px;">
-      <img src="img/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
+      <img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
     </div>
     <div class="jumbotron slogan-img" style="background-color: white">
       <ul id="banner-list">
