--- a/home.html
+++ b/home.html
@@ -101,11 +101,11 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/Website img/painting_1.jpg" alt="Los Angeles" width="100%" height="700">
-        <div class="header-text hidden-xs">
-          <div class="col-md-12 text-center">
+        <img src="img/webimg/painting_1.jpg" alt="painting_1" width="100%" height="50%">
+        <div class=" header-text hidden-xs">
+          <div class="col-md-12 text-left">
             <h2>
-              <span>Welcome to <strong>LOREM IPSUM</strong></span>
+              <span>Welcome to <strong>Milad Painting</strong></span>
             </h2>
             <br>
             <h3>
@@ -113,8 +113,8 @@
             </h3>
             <br>
             <div class="">
-              <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a
-                class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+              <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a>
+            </div>
           </div>
         </div><!-- /header-text -->
 
