--- a/home.html
+++ b/home.html
@@ -156,49 +156,59 @@
   </div>
 
   <!-- Main Content -->
-  <div class="container" style="margin-top:30px">
+  <div class="container" style="margin-top:30px; max-width: 100%;padding: 0px;">
 
+    <section id="welcome">
+      <div class="container">
+        <div class="row" id="wrapper">
+          <div class="col-sm-6 scrollbar" id="style-15">
+            <h2><b>Welcome To Milad Painting Service</b></h2>
+            <div class="force-overflow">
+              <p>Whether you want to embellish the interior spaces of your home or attract new customers to your
+                business,
+                Ansell Painting can provide the professional assistance that you need. With over 20 years of painting
+                experience under our belts, our highly qualified specialists are among the best Melbourne house painters
+                you
+                can find.
 
-    <div class="row" id="wrapper">
-      <div class="col-sm-6 scrollbar" id="style-15">
-        <h2><b>Welcome To Milad Painting Service</b></h2>
-        <div class="force-overflow">
-          <p>Whether you want to embellish the interior spaces of your home or attract new customers to your business,
-            Ansell Painting can provide the professional assistance that you need. With over 20 years of painting
-            experience under our belts, our highly qualified specialists are among the best Melbourne house painters you
-            can find.
+                If you’re looking for a one-stop shop for business and house painting services in Melbourne, you’ve come
+                to
+                the right place. Ansell Painting has developed a reputation for superior workmanship, using the latest
+                equipment and methodologies to deliver the very best results when it comes to our commercial and
+                residential
+                painters’ services.
+              </p> <br />
 
-            If you’re looking for a one-stop shop for business and house painting services in Melbourne, you’ve come to
-            the right place. Ansell Painting has developed a reputation for superior workmanship, using the latest
-            equipment and methodologies to deliver the very best results when it comes to our commercial and residential
-            painters’ services.
-          </p> <br />
+              <h4><b>Commitment to House Painting Professionalism</b></h4>
+              <p>Our Melbourne house painters are committed to providing the highest quality services. Our company has
+                met
+                the following “Dulux Accredited Painters” rigorous requirements:
 
-          <h4><b>Commitment to House Painting Professionalism</b></h4>
-          <p>Our Melbourne house painters are committed to providing the highest quality services. Our company has met
-            the following “Dulux Accredited Painters” rigorous requirements:
+                Personally signed an Ethical and Professional Standards Agreement
+                Provided two client references from work completed in the last twelve months
+                Obtained an Assessment of Workmanship by Dulux
+                Attended professional business seminars and Dulux Specialty product courses
+                Minimum of $10 Million public liability insurance
+                Comply with all safety regulations
+              </p> <br />
+              <h4><b>Our Reliability for House Painting</b></h4>
+              <p>At Ansell Painting, our reputation is extremely important to us. While other tradesmen may not even
+                turn
+                up, you can rely on our business and house painting services to arrive on time and carry out painting
+                tasks
+                in a timely and efficient manner.</p> <br />
 
-            Personally signed an Ethical and Professional Standards Agreement
-            Provided two client references from work completed in the last twelve months
-            Obtained an Assessment of Workmanship by Dulux
-            Attended professional business seminars and Dulux Specialty product courses
-            Minimum of $10 Million public liability insurance
-            Comply with all safety regulations
-          </p> <br />
-          <h4><b>Our Reliability for House Painting</b></h4>
-          <p>At Ansell Painting, our reputation is extremely important to us. While other tradesmen may not even turn
-            up, you can rely on our business and house painting services to arrive on time and carry out painting tasks
-            in a timely and efficient manner.</p> <br />
-
-          <h4><b>Experienced and Skilled Melbourne House Painters</b></h4>
-          <p>Our business and house painting services in Melbourne have been selected by Dulux for the experience and
-            expertise we possess as well as the extra pride we take in every job.</p>
+              <h4><b>Experienced and Skilled Melbourne House Painters</b></h4>
+              <p>Our business and house painting services in Melbourne have been selected by Dulux for the experience
+                and
+                expertise we possess as well as the extra pride we take in every job.</p>
+            </div>
+          </div>
+          <div class="col-sm-6" style="background-image: url(img/webimg/welcome.jpeg); background-size: cover">
+          </div>
         </div>
       </div>
-      <div class="col-sm-6" style="background-image: url(img/webimg/welcome.jpeg); background-size: cover">
-
-      </div>
-    </div>
+    </section>
 
     <!-- Our Service Section -->
     <section id="our-services">
@@ -281,7 +291,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="pt-5 pb-4" id="contact">
+  <footer class="pt-5 pb-4" id="footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
