--- a/contact_us.html
+++ b/contact_us.html
@@ -20,7 +20,9 @@
   <!-- Header -->
   <div class="container-fluid">
     <div class="row image-container" style="background-color: white; height: 80px;">
-      <img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
+      <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
+          style="height: 100%;">
+      </a>
     </div>
     <div class="jumbotron slogan-img" style="background-color: white">
       <ul id="banner-list">
@@ -52,24 +54,6 @@
       </ul>
     </div>
   </div>
-
-
-  <!-- <nav id="menu-nav">
-    <div id="navigation-bar">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul>
-          <li><a href="#"><i class="fas fa-home"></i><span>Home</span></a></li>
-          <li><a href="#"><i class="fas fa-paint-roller"></i><span>Services</span></a></li>
-          <li><a href="#"><i class="fas fa-image"></i><span>Gallery</span></a></li>
-          <li><a href="#"><i class="fas fa-book"></i><span>About Us</span></a></li>
-          <li><a href="#"><i class="fas fa-address-card"></i> <span>Contact Us</span></a></li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
 
   <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
