--- a/service.html
+++ b/service.html
@@ -23,7 +23,9 @@
     <!-- Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
-            <img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image" style="height: 100%;">
+            <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
+                    style="height: 100%;">
+            </a>
         </div>
         <div class="jumbotron slogan-img" style="background-color: white">
             <ul id="banner-list">
