create the sidebar for service
create the sidebar for service

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="footer.css">
 
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
+  <link href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css" rel="stylesheet">
 
 </head>
 
@@ -89,7 +90,6 @@
       </div>
     </div>
   </nav>
-  <link href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css" rel="stylesheet">
 
   <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
     <!-- Indicators -->
@@ -233,7 +233,8 @@
                   title="Residential Painters">
                 <div class="card-body" style="background-color: #1FF042; text-decoration: none; color:black;">
                   <!-- put the link -->
-                  <a class="stretched-link" style="text-decoration: none; color: black;" href="">
+                  <a class="stretched-link" style="text-decoration: none; color: black;"
+                    href="residential-painting.html">
                     <h3 class="card-title">
                       <strong>Residential Painters</strong>
                     </h3>
@@ -247,7 +248,8 @@
                 <img class="card-img-top" src="img/webimg/commercial_painter.jpeg" alt="Card image cap"
                   title="Commercial Painters">
                 <div class="card-body" style="background-color: #1FF042; text-decoration: none; color:black;">
-                  <a class="stretched-link" style="text-decoration: none; color: black;" href="">
+                  <a class="stretched-link" style="text-decoration: none; color: black;"
+                    href="commerical-painting.html">
                     <h3 class="card-title">
                       <strong>Commercial Painters</strong>
                     </h3>
@@ -261,7 +263,7 @@
                 <img class="card-img-top" src="img/webimg/roof_painter.jpeg" alt="Card image cap" title="Roof Painters">
                 <a href="http://www.ansellpainting.com.au/residential-painting-melbourne/">
                   <div class="card-body" style="background-color: #1FF042; text-decoration: none; color:black;">
-                    <a class="stretched-link" style="text-decoration: none; color: black;" href="">
+                    <a class="stretched-link" style="text-decoration: none; color: black;" href="roof-painting.html">
                       <h3 class="card-title">
                         <strong>Roof Painters</strong>
                       </h3>
@@ -276,7 +278,8 @@
                   title="Exterior Painters">
                 <a href="http://www.ansellpainting.com.au/residential-painting-melbourne/">
                   <div class="card-body" style="background-color: #1FF042; text-decoration: none; color:black;">
-                    <a class="stretched-link" style="text-decoration: none; color: black;" href="">
+                    <a class="stretched-link" style="text-decoration: none; color: black;"
+                      href="exterior-painting.html">
                       <h3 class="card-title">
                         <strong>Exterior Painters</strong>
                       </h3>
