fixed the deatils for welcome word section
fixed the deatils for welcome word section

--- a/home.html
+++ b/home.html
@@ -170,44 +170,90 @@
           <div class="col-sm-6 scrollbar" id="style-15">
             <h2> <b>Welcome To Milad Painting Service</b> </h2>
             <div class="force-overflow">
-              <p>Whether you want to embellish the interior spaces of your home or attract new customers to your
-                business,
-                Ansell Painting can provide the professional assistance that you need. With over 20 years of painting
-                experience under our belts, our highly qualified specialists are among the best Melbourne house painters
-                you
-                can find.
+              <p style="text-align: justify;">&#8680; Milad Painting is a well-established painting company offering
+                high
+                quality painting services to
+                homeowners, businesses, contractors and property management companies across Essendon and South
+                Melbourne. Every member of our team is highly skilled in both exterior painting as well as interior
+                painters Melbourne and can handle painting projects of all sizes. Our expertise and experience in the
+                industry allow us to take care of all your painting needs. At Milad Painting, we believe that it is our
+                responsibility to understand the exact requirements of our customers and deliver the perfect solution
+                for them. That’s why we help them with everything, from budget management to colour consultation and
+                general guidance to make their painting project a successful one. We don’t just strive to meet your
+                needs, but we thrive to exceed your expectations. Do you have a project in mind?
+              </p>
 
-                If you’re looking for a one-stop shop for business and house painting services in Melbourne, you’ve come
-                to
-                the right place. Ansell Painting has developed a reputation for superior workmanship, using the latest
-                equipment and methodologies to deliver the very best results when it comes to our commercial and
-                residential
-                painters’ services.
-              </p> <br />
-
-              <h4><b>Commitment to House Painting Professionalism</b></h4>
-              <p>Our Melbourne house painters are committed to providing the highest quality services. Our company has
-                met
-                the following “Dulux Accredited Painters” rigorous requirements:
-
-                Personally signed an Ethical and Professional Standards Agreement
-                Provided two client references from work completed in the last twelve months
-                Obtained an Assessment of Workmanship by Dulux
-                Attended professional business seminars and Dulux Specialty product courses
-                Minimum of $10 Million public liability insurance
-                Comply with all safety regulations
-              </p> <br />
-              <h4><b>Our Reliability for House Painting</b></h4>
-              <p>At Ansell Painting, our reputation is extremely important to us. While other tradesmen may not even
-                turn
-                up, you can rely on our business and house painting services to arrive on time and carry out painting
-                tasks
-                in a timely and efficient manner.</p> <br />
-
-              <h4><b>Experienced and Skilled Melbourne House Painters</b></h4>
-              <p>Our business and house painting services in Melbourne have been selected by Dulux for the experience
+              <p style="text-align: justify; font-weight: 600;">
+                &#9990; Call us at <a href="tel:+6124 449 225">+61 24 449 225</a>
+                for a no-obligation quote and discover how we can make your painting job easy & stress free.
+              </p>
+              <p style="text-align: justify;">
+                &#8226; When you come to our services, you will definitely know that you make the right decision to make
+                your
+                satisfaction comes true. These above reasons to tell you why:
+                <br />
+                &#8226; 100% punctual, reliable. You can be sure that once we work out the time, we will be there as you
+                need.
+                <br />
+                &#8226; Always receive free quotations from us.
+                <br />
+                &#8226; Almost we use the best Dulux brand products, unless you would like to have your own options.
+                <br />
+                &#8226; We will not charge you extra if we cause damages and we will 100% fix them to make you feel the
+                best.
+                <br />
+                &#8226; Perfectly clean our working area after we finish the job so you just need to move your things in
                 and
-                expertise we possess as well as the extra pride we take in every job.</p>
+                start living under your dreaming house.
+              </p>
+              <br />
+
+              <h4><b>Miland Painting Service</b></h4>
+              <p style="text-align: justify;">&#8680;We do have all services you need for your painting fields and these
+                are particularly outstanding services from us:
+              </p>
+              <p style="text-align: justify;">
+                &#10061; <a href="residential-painting.html"><strong>Residential painting:</strong></a> we look after of
+                making freshly new painting or even renovation in
+                order to make the house/company has greater look.
+                <br />
+                &#10061; <a href="spray-painting.html"><strong>Spraying painting:</strong></a> every single member in
+                our professional team knows to do this technique
+                perfectly with their experiences and skills. Nowadays, people start using spraying by gun instead of
+                using brushes. We can save heaps of time as this technique will provide you speed but precise level (the
+                work can be done faster compares to plan), as well as clients can reduce labours which costs them more
+                compares to old methods.
+                <br />
+                &#10061; <a href="roof-painting.html"><strong>Roof painting:</strong></a> one of the toughest jobs for
+                our field is this part. Entire of clients are very
+                stressful when they try to fix the roof. Don’t worry!!!! You can pass those stress for us. We will
+                definitely take care of it. The house will give you completely new look if you change the appearance of
+                the roof. It means the roof is one the most obviously part to see difference of replacement or repair.
+                So leave all for us, you will experience the best feeling we will bring to you.
+                <br />
+                &#10061; <a href="commerical-painting.html"><strong>Commercial painting:</strong></a> this idea will be
+                the best for those ones who looking for increasing their
+                properties. We will help you to do so by listening to your ideas and make it come true. Every single
+                detail would have our attentions. Both interior and exterior parts would be taken care and transformed
+                to newly positive look from our team. This work will attract your potentially clients and make them must
+                buy the property from you easy.
+                <br />
+                &#10061; <a href="plastering.html"><strong>Plastering:</strong></a> this process sounds simple but
+                requires heaps of precise skills and experience,
+                even
+                single tiny attention. The perfect outcome of this step will provide you the smooth look of plastering
+                with absolutely and accuracy look.
+                <br />
+                &#10061; Dulux or other famous brand colour consultation: Dulux is always our priority option to use for
+                our services. The reason is Dulux quality will help you to maintain the colour scheme of your house long
+                lasting and great looking as always. When you come to us, there are two people will help you with
+                complete your painting requirements, one from our team, and the other is from Dulux company. You should
+                not worry about their knowledge and experience because is more than enough. Once you email us about your
+                quote or consultation, we will save your number to give you a call for appointment, so we can have
+                discussion about how you your dream house want to be, what colour you are having in your mind, are you
+                sure if you have multiple options you cannot make decision or you are not confident about it? All of
+                your question will be answered by us to help you finalize and clarify to complete your dream house.
+              </p>
             </div>
           </div>
           <div class="col-sm-6" style="background-image: url(img/webimg/welcome.jpeg); background-size: cover">
@@ -239,7 +285,8 @@
                       <strong>Residential Painters</strong>
                     </h3>
                   </a>
-                  <p class="card-text">abc</p>
+                  <p class="card-text">We look after of making freshly new painting or even renovation in order to make
+                    the house/company has greater look.</p>
                 </div>
               </div>
             </div>
@@ -254,7 +301,8 @@
                       <strong>Commercial Painters</strong>
                     </h3>
                   </a>
-                  <p class="card-text">ffff</p>
+                  <p class="card-text">This idea will be the best for those ones who looking for increasing their
+                    properties.</p>
                 </div>
               </div>
             </div>
@@ -268,7 +316,8 @@
                         <strong>Roof Painters</strong>
                       </h3>
                     </a>
-                    <p class="card-text">abc</p>
+                    <p class="card-text">It means the roof is one the most obviously part to see difference of
+                      replacement or repair.</p>
                   </div>
               </div>
             </div>
@@ -284,7 +333,8 @@
                         <strong>Exterior Painters</strong>
                       </h3>
                     </a>
-                    <p class="card-text">abc</p>
+                    <p class="card-text">Painting your exteriors, be it at home or office is a crucial thing to be done
+                      because exterior painting gives an apt finish to the whole painting process.</p>
                   </div>
               </div>
             </div>
@@ -352,13 +402,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      if (!$.browser.webkit) {
-        $('.wrapper').html('<p>Sorry! Non webkit users. :(</p>');
-      }
-    });
-  </script>
 </body>
 
 </html>
